--- a/exercicio2/style.css
+++ b/exercicio2/style.css
@@ -1,44 +1,70 @@
 *{
-    margin: 0;
-    padding: 0;
-    font-family: 'Helvetica', sans-serif;
-  }
-  
-  header, .a{
-    height: 50px;
-    background-color: #5e5e5e;
-    width: 100vw;
-    text-align: center;
-    color: white;
-  }
-  
-  main, .b{
-    height: 90vh;
-    display: flex;
-    flex-direction: row;
-    align-items: stretch;
-  }
-  
-  section, .c{
-    background-color: #d4d4d4;
-    width: 100%;
-    padding: 20px 20px 0 20px;
-  }
-  
-  article, .d{
-    background-color: #dedede;
-    height: 25%;
-    width: 100%;
-    margin-top: 20px;
-    padding-top: 2%;
-    padding-left: 1%;
-  }
-  
-  footer, .e{
-    background-color: #242424;
-    height: 50px;
-    padding: 20px 0 0 20px;
-    text-align: center;
-    color: white;
-  }
-  
+  margin: 0;
+  padding: 0;
+  font-family: 'Helvetica', sans-serif;
+}
+
+header, .a{
+  height: 50px;
+  background-color: #5e5e5e;
+  width: 100vw;
+  text-align: center;
+  color: white;
+}
+
+main, .b{
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+}
+
+section, .c{
+  background-color: #d4d4d4;
+  width: 100%;
+  padding: 10px 20px 0 20px;
+}
+
+article, .d{
+  background-color: #dedede;
+  height: 200px;
+  width: 100%;
+  margin-top: 10px;
+  padding-top: 2%;
+  padding-left: 1%;
+}
+
+footer, .e{
+  background-color: #242424;
+  height: 50px;
+  padding: 20px 0 0 20px;
+  text-align: center;
+  color: white;
+}
+
+img {
+  width: 200px;
+}
+video {
+  width: 200px;
+}
+
+form {
+  height: 600px;
+  font-size: 18px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  margin-left: 10px;
+}
+input {
+  width: 400px;
+  height: 30px;
+}
+
+button {
+  width: 100px;
+  height: 50px;
+  font-size: 18px;
+}
+#clima {
+  width: 400px;
+  height: 200px;
+}
