--- a/exercicio3/style.css
+++ b/exercicio3/style.css
@@ -13,7 +13,6 @@
   }
   
   main, .b{
-    height: 90vh;
     display: flex;
     flex-direction: row;
     align-items: stretch;
@@ -22,14 +21,14 @@
   section, .c{
     background-color: #d4d4d4;
     width: 100%;
-    padding: 20px 20px 0 20px;
+    padding: 10px 20px 0 20px;
   }
   
   article, .d{
     background-color: #dedede;
-    height: 25%;
+    height: 200px;
     width: 100%;
-    margin-top: 20px;
+    margin-top: 10px;
     padding-top: 2%;
     padding-left: 1%;
   }
@@ -42,3 +41,30 @@
     color: white;
   }
   
+  img {
+    width: 200px;
+  }
+  video {
+    width: 200px;
+  }
+
+  form {
+    height: 600px;
+    font-size: 18px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin-left: 10px;
+  }
+  input {
+    width: 400px;
+    height: 30px;
+  }
+
+  button {
+    width: 100px;
+    height: 50px;
+    font-size: 18px;
+  }
+  #clima {
+    width: 400px;
+    height: 200px;
+  }
