--- a/exercicio3/style.css
+++ b/exercicio3/style.css
@@ -15,7 +15,7 @@
   main, .b{
     display: flex;
     flex-direction: row;
-    align-items: stretch;
+    align-items: center;
   }
   
   section, .c{
@@ -49,19 +49,21 @@
   }
 
   form {
+    justify-self: center;
     height: 600px;
     font-size: 18px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    margin-left: 10px;
+
   }
   input {
     width: 400px;
     height: 30px;
+    justify-content: right;
   }
 
   button {
-    width: 100px;
-    height: 50px;
+    width: 600px;
+    height: 30px;
     font-size: 18px;
   }
   #clima {
